增加导航栏样式

--- a/pages/home_page/style.styl
+++ b/pages/home_page/style.styl
@@ -1,3 +1,9 @@
 #home-wrapper
-  width 100vw
-  height 100vh
+  position: relative;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 960px;
+  background white
+  height 100px
+  margin-top 20px
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04)
